objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>CCH__c</fullName>
        <label>CCH</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRT__c</fullName>
        <label>CRT</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credentials__c</fullName>
        <label>Credentials</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Definition__c</fullName>
        <label>Definition</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Economic_Buyer__c</fullName>
        <label>Economic Buyer</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final__c</fullName>
        <label>Final</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merge_Conflict__c</fullName>
        <label>Merge Conflict</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partial_Update__c</fullName>
        <label>Partial Update</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <label>Passport</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Selective_Commits__c</fullName>
        <label>Selective Commits</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <label>Solution</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wynn_Demo__c</fullName>
        <label>Wynn Demo</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <filterScope>Everything</filterScope>
        <label>All Opportunities</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Opportunities</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>